--- a/index.html
+++ b/index.html
@@ -1,1 +1,69 @@
-Hello World
+<!DOCTYPE html>
+<html lang = 'en'>
+<head>
+	<title> Lauren Radtke | Resume </title>
+</head>
+<body>
+  <!-- // Intro -->
+  <header>
+    <img src="your-picture.jpg" alt="Your Name">
+    <h1>Lauren Radtke</h1>
+    <h2>Brown Scholar | Student</h2>
+    <p>Add your profile summary here. You can have several paragraphs or add links.</p>
+  </header>
+
+  <main>
+    <!-- // Work Experience -->
+    <section>
+      <h2>Work Experience</h2>
+
+      <!-- Job Details: copy this whole block to add more jobs -->
+      <h3>Brown Scholar | Intern</h3>
+      <p>American Museum of Natural History | Brown Scholars Program</p>
+      <p>October 2018 -> June 2019</p>
+
+      <!-- Add as many paragraphs as you need. -->
+      <p>Job summary.</p>
+
+      <!-- This list can be deleted if you don't want to use it. -->
+      <p>Optional list:</p>
+      <ul>
+        <li>Learned to code in R</li>
+        <li>Cleaned, analysed, and visualized data</li>
+        <li>Studied cland cover change for conservation in the Solomon islands</li>
+      </ul>
+      <!-- end of Job Details block. -->
+
+    </section>
+
+
+    <!-- // Education -->
+    <section>
+      <h2>Education</h2>
+
+      <!-- School details: copy this whole block to add more schools. -->
+      <h3>School name, year you attended</h3>
+      <p>Designation received</p>
+
+      <!-- Add as many paragraphs as you need. -->
+      <p>Summary.</p>
+      <!-- End of school details. -->
+    </section>
+  </main>
+
+  <!-- // Footer & contact info -->
+  <footer>
+    <h2>Let's Keep in Touch!</h2>
+
+    <!-- Social media and contact links. Add or remove any networks. -->
+    <div>
+      <a href="mailto:email@example.com">email@example.com</a>
+      <a href="#" target="_blank">Github</a>
+      <a href="#" target="_blank">Twitter</a>
+      <a href="#" target="_blank">LinkedIn</a>
+    </div>
+
+    <p>Copyright 2019 by Your Name</p>
+  </footer>
+</body>
+</html>
